test2-2023-03-24.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.0149 seconds

  ----Wall Time----  ----Name----
    1.0136 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.9571 ( 94.3%)    Parse modules
    0.0013 (  0.1%)  Rest
    1.0149 (100.0%)  Total

{
  totalTime: 1.025,
  maxMemory: 161628160
}
